--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,9 +30,13 @@
     <string name="Address">Address</string>
     <string name="myAddress">Sompovlun ,BatdomBong</string>
     <string name="Addr">........</string>
-
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+<!--    -->
+
+    <string name="JordanDesciption">Air Jordan is a line of basketball shoes and athletic clothing produced by American corporation Nike. The first Air Jordan shoe was produced for Hall of Fame former basketball player Michael Jordan</string>
+
 </resources>
